2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs: There is no need to
	  manually dispose the child view. It will be disposed when the parent is
	  destroyed.
	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Removed old error
	  underlining code. Avoid leak caused by event subscription.
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Don't try to show the
	  tooltip after the window has been disposed.
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Destroy the
	  main widget when the view is disposed. Removed some old error
	  underlining code.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed "Bug
	  325519 - Unable to open web.config files from solution explorer".

2007-10-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Bug 328817 - New created
	  file use Tab with Convert Tab to spaces enabled

2007-10-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed bug
	  330265 - Tab to spaces not used if indent type is none or automatic.

2007-10-02  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Fixed error causing
	  an extra space to be unindented. (Bug #328776)

2007-10-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Don't crash if the
	  parser does not provide error information. Fixes bug #330025.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Use the
	  TextEditorProperties class to get the properties object to which
	  subscribe for events.

2007-09-21  Jérémie Laval <jeremie.laval@gmail.com>

	* MonoDevelop.SourceEditor.Gui/LanguageItemWindow.cs: Added support
	  for on-the-fly parsing errors visually with a red underline and